--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,10 @@
 
         "no-bitwise": "warn",
         "eqeqeq": "error",
-        "no-use-before-define": ["error", { "functions": false }],
+        "no-use-before-define": ["error", {
+            "functions": false,
+            "variables": false
+        }],
         "no-caller": "error",
         "no-undef": "error",
         "no-unused-vars": "warn",
