Tweak linting rules
    Enforce usage of brackets exclusively in blocks with multiple statements &
    ignore usage of capitalized attribute names.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,9 +34,8 @@
         "prefer-const": "warn",
         "prefer-spread": "warn",
 
-        "curly": ["warn", "multi-line"],
+        "curly": ["warn", "multi"],
         "camelcase": ["warn"],
-        "new-cap": "warn",
         "wrap-iife": ["warn", "inside"],
         "quotes": ["warn", "single"],
         "semi": ["warn", "always"],
